# GraphiT-TaichiExample

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Run-Android.ps1  Run-Host.ps1
assets/fractal/: fractal_c56_0_k0000_vk_0_t00.spv  metadata.json  metadata.tcb
assets/fractal.cgraph/: graphs.tcb  metadata.json
prebuilt/x86_64-pc-msvc-windows/lib/: taichi_c_api.lib
scripts/: fractal.cgraph.py  fractal.py
src/: app.cpp
